# drf-full-stack

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
core/: routers.py
core/abstract/: __init__.py  models.py
core/auth/: permissions.py  tests.py
core/auth/serializers/: __init__.py  login.py  register.py
core/auth/viewsets/: __init__.py  login.py  logout.py  refresh.py  register.py
core/comment/: models.py  serializers.py  viewsets.py
core/comment/migrations/: 0001_initial.py
core/comment/tests/: test_viewsets.py
core/fixtures/: comment.py  user.py
core/post/: models.py  serializers.py  viewsets.py
core/post/migrations/: 0001_initial.py
core/post/tests/: test_viewsets.py
core/user/: models.py  serializers.py  viewsets.py
core/user/migrations/: 0001_initial.py  0002_user_posts_liked.py  0003_user_avatar.py
core/user/tests/: test_viewsets.py
core_root/: asgi.py  settings.py  urls.py  wsgi.py
